# dovecot-core

./: README.md  configure.ac
src/auth/: auth-settings.c  auth-settings.h
src/imap/: Makefile.am  cmd-x-apple-push-service.c  imap-client.c  imap-commands.c  imap-commands.h  imap-settings.c  imap-settings.h
src/imap-login/: imap-login-client.c  imap-login-settings.c  imap-login-settings.h
src/lib-lda/: mail-deliver.c  mail-deliver.h
src/plugins/: Makefile.am
src/plugins/push-notify/: Makefile.am  push-notify-plugin.c
